force-app/main/default/objects/Region__c.object
<CustomObject>
    <fields>
        <fullName>Global_Region__c</fullName>
        <label>Global Region</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>APAC</fullName>
                </value>
                <value>
                    <fullName>EMEA</fullName>
                </value>
                <value>
                    <fullName>LATAM</fullName>
                </value>
                <value>
                    <fullName>NORAM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Named_SDR__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Named SDR</label>
        <referenceTo>Rep__c</referenceTo>
        <relationshipLabel>Regions</relationshipLabel>
        <relationshipName>Regions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Round_Robin_Variable__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Round Robin Variable</label>
        <precision>2</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Region</label>
    <nameField>
        <label>Region Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Regions</pluralLabel>
    <recordTypes>
        <fullName>SDR</fullName>
        <active>true</active>
        <label>SDR</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>